--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.15.0",
     "react-scripts": "5.0.1",
+    "recoil": "^0.7.7",
     "styled-components": "^6.0.7"
   },
   "scripts": {
