refactor: 원티드 주소 환경변수로 변경

--- a/.env
+++ b/.env
@@ -1,3 +1,5 @@
 REACT_APP_ISSUES_API_URL=https://api.github.com/repos/facebook/react/issues
+REACT_APP_WANTED_IMG_URL=https://image.wanted.co.kr/optimize?src=https%3A%2F%2Fstatic.wanted.co.kr%2Fimages%2Fuserweb%2Flogo_wanted_black.png&w=110&q=100
+REACT_APP_WANTED_URL=https://www.wanted.co.kr/
 
 
