--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "marked": "^7.0.5",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-markdown": "^8.0.7",
     "react-router-dom": "^6.15.0",
     "react-scripts": "5.0.1",
     "styled-components": "^6.0.7"
